# app/Http/Controllers/API/OrdersController.php
@@ -84,6 +84,7 @@ class OrdersController extends Controller
             'user_id' => $accessCard->user->id,
             'menu_id' => $todayMenu->id,
             'dish_id' => $request->dish_id,
+            'is_for_the_evening' => $request->is_for_the_evening,
         ]);
 
         /*
